--- a/user/pom.xml
+++ b/user/pom.xml
@@ -9,25 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>book</artifactId>
+    <artifactId>user</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-    <dependencies>
-
-
-        <dependency>
-            <groupId>org.yu</groupId>
-            <artifactId>common</artifactId>
-            <version>1.4.1</version>
-        </dependency>
-        <!--        <dependency>-->
-<!--            <groupId>org.springframework.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-starter-openfeign</artifactId>-->
-<!--            <version>3.0.0</version>-->
-<!--        </dependency>-->
-    </dependencies>
 
 </project>
