--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -16,10 +16,14 @@ spring:
       maxActive: 20
       time-between-eviction-runs-millis: 60000
       validation-query: select 1 from dual
+  output:
+    ansi:
+      enabled: detect
 #  rabbitmq:
 #    host: localhost
 #    port: 5672
 #    username: guest
+
 #    virtual-host: /
 #    password: guest
 #  mvc:
@@ -28,26 +32,27 @@ spring:
 #    prefix: classpath:/templates/
 #    suffix: .html
 #    encoding: utf-8
-  cloud:
-    zookeeper:
-      connect-string: localhost:2181
-      discovery:
-        register: true
-        root: /service
-        enabled: true
+#  cloud:
+#    zookeeper:
+#      connect-string: 10.6.53.76:2181
+#      discovery:
+#        register: true
+#        root: /service
+#        enabled: true
 #  application:
-#    name: /ol-consumer
+#    name: ol-consumer
 
 dubbo:
   application:
-
     name: ol-consumer
     logger: slf4j
 
   registry:
-    address: zookeeper://192.168.168.184:2181
+    address: zookeeper://localhost:2181
     timeout: 30000
 
+  consumer:
+    loadbalance: roundrobin
 
 mybatis:
     mapperLocations: classpath:mapper/**/*Mapper.xml
