--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     druid:
-      url: jdbc:mysql://localhost:3306/gzq?useSSL=true&serverTimezone=Asia/Shanghai&characterEncoding=utf8
+      url: jdbc:mysql://192.168.118.1:3306/gzq?useSSL=true&serverTimezone=Asia/Shanghai&characterEncoding=utf8
       username: root
       password: gzq102938
       minIdle: 10
@@ -19,22 +19,27 @@ spring:
   output:
     ansi:
       enabled: detect
-#  rabbitmq:
-#    host: localhost
-#    port: 5672
-#    username: guest
+  kafka:
+    listener:
+      ack-mode: manual
 
-#    virtual-host: /
-#    password: guest
-#  mvc:
-#    static-path-pattern: /static/**
-#  thymeleaf:
-#    prefix: classpath:/templates/
-#    suffix: .html
-#    encoding: utf-8
+    bootstrap-servers: 192.168.118.66:9092
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+
+    virtual-host: /
+    password: guest
+  mvc:
+    static-path-pattern: /static/**
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    encoding: utf-8
 #  cloud:
 #    zookeeper:
-#      connect-string: 10.6.53.76:2181
+#      connect-string: 192.168.118.66:2181
 #      discovery:
 #        register: true
 #        root: /service
@@ -48,12 +53,17 @@ dubbo:
     logger: slf4j
 
   registry:
-    address: zookeeper://localhost:2181
+    address: zookeeper://${zookeeper.address:127.0.0.1}:2181
     timeout: 30000
+  protocol:
+    port: 28880
+    name: dubbo
 
   consumer:
     loadbalance: roundrobin
 
+zookeeper:
+  address: 192.168.118.66
 mybatis:
     mapperLocations: classpath:mapper/**/*Mapper.xml
     configLocation: classpath:mybatis-config.xml
