--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>admin</module>
         <module>common</module>
         <module>user</module>
+        <module>mq</module>
     </modules>
 
     <properties>
@@ -27,6 +28,7 @@
         <commons.fileupload.version>1.4</commons.fileupload.version>
         <commons.collections.version>3.2.2</commons.collections.version>
         <dubbo.version>3.0.4</dubbo.version>
+        <spring.kafka.version>2.6.6</spring.kafka.version>
     </properties>
 
     <dependencyManagement>
@@ -114,6 +116,23 @@
                     </exclusion>
                 </exclusions>
                 <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>${spring.kafka.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>2.4.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka_2.13</artifactId>
+                <version>2.4.1</version>
             </dependency>
 
         </dependencies>
