--- a/user/pom.xml
+++ b/user/pom.xml
@@ -15,5 +15,12 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.yu</groupId>
+            <artifactId>mq</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
